Eval_Kubernetes/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: my-sqlapi-service
  labels:
    app: my-sqlapi-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-sqlapi-api
